--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0.2",
         "ext-exif": "*",
         "aws/aws-sdk-php": "^3.176",
         "fideloper/proxy": "^4.4",
@@ -31,7 +31,8 @@
         "livewire/livewire": "^2.5",
         "miljar/php-exif": "^0.6.5",
         "spatie/laravel-medialibrary": "^9.0.0",
-        "spatie/laravel-permission": "^4.0"
+        "spatie/laravel-permission": "^4.0",
+        "spatie/valuestore": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
