--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/img/droneraising-logo.png": "/img/droneraising-logo.png",
-    "/svg/droneraising-isologotipo.svg": "/svg/droneraising-isologotipo.svg"
+    "/svg/droneraising-isologotipo.svg": "/svg/droneraising-isologotipo.svg",
+    "/examples/inspection_data_example.csv": "/examples/inspection_data_example.csv"
 }
