--- a/composer.json
+++ b/composer.json
@@ -19,41 +19,43 @@
         "php": "^8.0.2",
         "ext-exif": "*",
         "aws/aws-sdk-php": "^3.176",
-        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.40",
-        "laravel/jetstream": "^2.3",
-        "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.5",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^9.0",
+        "laravel/jetstream": "^2.8",
+        "laravel/sanctum": "^2.14.1",
+        "laravel/tinker": "^2.7",
         "league/csv": "^9.8",
-        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^2.5",
         "miljar/php-exif": "^0.6.5",
-        "spatie/laravel-medialibrary": "^9.0.0",
-        "spatie/laravel-permission": "^4.0",
-        "spatie/valuestore": "^1.3"
+        "rappasoft/laravel-livewire-tables": "^2.7",
+        "spatie/laravel-db-snapshots": "^2.3",
+        "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-permission": "^5.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^0.1.1",
         "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
         "pestphp/pest": "^1.0",
         "pestphp/pest-plugin-faker": "^1.0",
         "pestphp/pest-plugin-laravel": "^1.0",
         "pestphp/pest-plugin-livewire": "^1.0",
-        "phpunit/phpunit": "^9.3.3",
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
-        }
+        },
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
     },
     "extra": {
         "laravel": {
