--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,7 @@
     "/css/app.css": "/css/app.css",
     "/img/droneraising-logo.png": "/img/droneraising-logo.png",
     "/svg/droneraising-isologotipo.svg": "/svg/droneraising-isologotipo.svg",
+    "/examples/equipment_data_example.csv": "/examples/equipment_data_example.csv",
+    "/examples/equipment_type_data_example.csv": "/examples/equipment_type_data_example.csv",
     "/examples/inspection_data_example.csv": "/examples/inspection_data_example.csv"
 }
