--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0']
+        php-versions: ['8.1']
 
     steps:
     - name: "Checkout code"
@@ -41,8 +41,8 @@ jobs:
     - name: "Shutdown the Default MySQL"
       run: sudo service mysql stop
 
-    - name: "Set up MariaDB"
-      uses: getong/mariadb-action@v1.1
+    - name: "Setup MySQL"
+      uses: mirromutth/mysql-action@v1.1
       with:
         mysql database: 'testing'
         mysql user: 'homestead'
