--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^2.5",
         "miljar/php-exif": "^0.6.5",
-        "rappasoft/laravel-livewire-tables": "^2.7",
+        "rappasoft/laravel-livewire-tables": "2.7",
         "spatie/laravel-db-snapshots": "^2.3",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.0"
