--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
+        "brianium/paratest": "^6.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^0.1.1",
         "laravel/sail": "^1.0.1",
@@ -45,6 +46,8 @@
         "pestphp/pest-plugin-faker": "^1.0",
         "pestphp/pest-plugin-laravel": "^1.0",
         "pestphp/pest-plugin-livewire": "^1.0",
+        "pestphp/pest-plugin-parallel": "^1.2",
+        "php-coveralls/php-coveralls": "^2.5",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0",
         "squizlabs/php_codesniffer": "^3.5"
