--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -71,3 +71,10 @@ jobs:
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         AWS_BUCKET: ${{ secrets.AWS_BUCKET }}
       run: vendor/bin/pest --stop-on-failure
+
+    - name: Upload coverage results to Coveralls
+    env:
+      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+    run: |
+      composer global require php-coveralls/php-coveralls
+      php-coveralls --coverage_clover=build/logs/clover.xml -v
